# src/main/java/com/santalucia/categorizer/infrastructure/controllers/MovementsApiController.java
@@ -1,18 +1,19 @@
 package com.santalucia.categorizer.infrastructure.controllers;
 
-import java.util.Random;
+import java.util.List;
 
 import org.springframework.http.ResponseEntity;
-import org.springframework.retry.annotation.CircuitBreaker;
-import org.springframework.retry.annotation.Recover;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.santalucia.categorizer.application.api.MovementsApi;
 import com.santalucia.categorizer.application.api.model.MovementCategorizedResource;
 import com.santalucia.categorizer.application.api.model.MovementResource;
-import com.santalucia.categorizer.application.exceptions.CategorizerException;
 import com.santalucia.categorizer.application.services.CategorizationService;
+import com.santalucia.categorizer.infrastructure.mappers.MovementMapper;
+import com.santalucia.categorizer.infrastructure.repository.MovementRepository;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -25,26 +26,31 @@ import lombok.extern.slf4j.Slf4j;
 public class MovementsApiController implements MovementsApi {
 
 	private final CategorizationService categorizationService;
+	private final MovementRepository movementRepository;
+	private final MovementMapper movementMapper;
 
 	@Override
-	@CircuitBreaker(maxAttempts = 3, openTimeout = 10000, resetTimeout= 60000)
-	public ResponseEntity<MovementCategorizedResource> categorizeMovement(@Valid MovementResource movement) {
-		log.info("Request categorizeMovement");
-		if (new Random().nextBoolean()) {
-			return ResponseEntity.ok(categorizationService.categorize(movement));
-		}
-		else {
-			throw new CategorizerException("Error categorizing");
-		}
-	}
-	
-	@Recover
-	public ResponseEntity<MovementCategorizedResource> categorizeMovementRecover(
-			Exception ex, @Valid MovementResource movement) {
-		log.info("Executing the recover:" + ex.getMessage());
-		return ResponseEntity.ok().build();
+	public ResponseEntity<MovementCategorizedResource> categorizeMovement(
+			@Valid MovementResource movementResource) {
 
+		var authentication = (JwtAuthenticationToken)SecurityContextHolder.
+				getContext().getAuthentication();
+		log.info("Authentication: {}", authentication.getTokenAttributes());
+		log.info("Categorization request {}", movementResource);
+		return ResponseEntity.ok(categorizationService.categorize(movementResource));
 	}
+
+	@Override
+	public ResponseEntity<List<MovementResource>> findAllMovements() {
+		
+		var movements = movementRepository.findAll();
+		
+		return ResponseEntity.ok(movementMapper.toListMovementResource(movements));
+	}
+
+	
+
+	
 
 	
 
